imporve: limit permission for cmd injection challenge

--- a/fuctf1-old_school/docker-compose.yml
+++ b/fuctf1-old_school/docker-compose.yml
@@ -16,6 +16,8 @@ services:
             - ./code:/code
         networks:
             - code-network
+        user: www-data
+
 
 networks:
     code-network:
