--- a/fuctf1-old_school/docker-compose.yml
+++ b/fuctf1-old_school/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         networks:
             - code-network
     php:
-        image: php:fpm
+        build: .
         volumes:
             - ./code:/code
         networks:
